added header style

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <div class="blue-bg">
         <h2>პროექტები</h2>
         <div class="dots">
-          <div class="dot"></div>
-          <div class="dot"></div>
-          <div class="dot"></div>
+          <span class="dot white"></span>
+          <span class="dot gray"></span>
+          <span class="dot gray"></span>
         </div>
       </div>
     </header>
