updated css main styless added photos and fixed positions

--- a/index.html
+++ b/index.html
@@ -17,5 +17,45 @@
         </div>
       </div>
     </header>
+    <main>
+      <div class="container">
+        <div class="building">
+          <img src="./Rectangle 18.png" alt="building" />
+          <div class="text-content">
+            <p>
+              ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143
+              ნომერში
+            </p>
+          </div>
+        </div>
+        <div class="building-19">
+          <img src="./Rectangle 19.png" alt="building" />
+          <div class="text-content">
+            <p>
+              ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143
+              ნომერში
+            </p>
+          </div>
+        </div>
+        <div class="building">
+          <img src="./Rectangle 20.png" alt="building" />
+          <div class="text-content">
+            <p>
+              ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143
+              ნომერში
+            </p>
+          </div>
+        </div>
+        <div class="building">
+          <img src="./Rectangle 21.png" alt="building" />
+          <div class="text-content">
+            <p>
+              ჩვენი მიმდინარე პროექტი რომელიც შენდება დიდუბეში, წერეთლის 143
+              ნომერში
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
