--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </p>
           </div>
         </div>
-        <div class="building-19">
+        <div class="building" id="up">
           <img src="./Rectangle 19.png" alt="building" />
           <div class="text-content">
             <p>
